semi final update